Loading icon alignment issue resolved

--- a/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/tab/resource/item/CollectionEditResource.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/tab/resource/item/CollectionEditResource.css
@@ -1840,7 +1840,7 @@ input[type="text"] {
 	margin-top: 150px;
 	position: absolute;
 	z-index: 9999999;
-	margin-left: 94px;
+	margin-left: 78px;
 }
 .loadingImageForResource1{
 	background: url("images/core/B-Dot.gif");
